--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             </div>
             <div class="box">
                 <div class="primeira_parte">
-                   <div>
+                   <div class="titulo2">
 
-                    <p class="titulo2"> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
+                    <p> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
                     de uma galinha é de </span> 13 segundos? </p>
-                    <p class="titulo2"> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades aleatórias 
+                    <p> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades aleatórias 
                     <span class="tranco"> de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa.</p> 
                     </div>
 
