--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
                    <div class="titulo2">
 
                     <p> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
-                    de uma galinha é de </span> 13 segundos? </p>
-                    <p> <span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades aleatórias 
-                    <span class="tranco"> de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa.</p> 
+                    de uma galinha é de </span> 13 segundos?<br><span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades aleatórias 
+                    <span class="tranco"> de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa.</p>
                     </div>
 
                      <div class="troco">   
