--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
         </ul>
     </header>
-    <section>
+    <section class="sextion">
         <div>
             <img src="./imagens/IMG_20240219_113841 1.png" alt="lorenzo">
             <h2>Lorenzo Antunes Pires</h2>
