--- a/index.html
+++ b/index.html
@@ -84,14 +84,17 @@
     </header>
     <section class="sextion">
         <div>
+            <h2>aleatorista</h2>
             <img src="./imagens/IMG_20240219_113841 1.png" alt="lorenzo">
             <h2>Lorenzo Antunes Pires</h2>
         </div>
         <div>
+            <h2>aleatorista</h2>
             <img src="./imagens/IMG_20230225_120436_743 1.png" alt="jumlia">
             <h2>Julia Moreira</h2>
         </div>
         <div>
+            <h2>aleatorista</h2>
             <img src="./imagens/IMG-20240219-WA0004 1.png" alt="waaa">
             <h2>Arthur Xisto Vieira</h2>
         </div>
