--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             font-family: "bentham";
             src: url("./Bentham-Regular.ttf") format("truetype");
         }
+        @font-face {
+            font-family: "andika";
+            src: url("./Andika-Regular.ttf") format("truetype");
+        }
     </style>
 </head>
 
