--- a/index.html
+++ b/index.html
@@ -103,5 +103,10 @@
             <h3>Arthur Xisto Vieira</h3>
         </div>
     </section>
+    <footer>
+        <p>nos siga em <a href="https://www.cep.pr.gov.br/">texto</a></p>
+        <p>Estamos localizados na rua Av. João Gualberto N°250</p>
+        <p>Entre em contato por (41) 99767-2993</p>
+    </footer>
 </body>
 </html>
