--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 
 <body>
     <header>
+        <h6>
+            <a href="">Equipe</a>
+        </h6>
         <ul>
             <div class="titulo"> 
                 <img src="./imagens/Arrow 2.png" alt="flecha" class="flecha1">
