--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <header>
         <h6>
-            <a href="">Equipe</a>
+            <a id="boton" href="">Equipe</a>
         </h6>
         <ul>
             <div class="titulo"> 
