--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <header>
         <h6>
-            <a id="boton" href="">Equipe</a>
+            <a class="boton" href="#boton">Equipe</a>
         </h6>
         <ul>
             <div class="titulo"> 
@@ -89,7 +89,7 @@
             </div>
         </ul>
     </header>
-    <section class="sextion">
+    <section id="boton" class="sextion">
         <div>
             <h2 class="aleatório">Aleatorista</h2>
             <img src="./imagens/IMG_20240219_113841 1.png" alt="lorenzo">
