--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         </div>
     </section>
     <footer>
-        <p>nos siga em <a href="https://www.cep.pr.gov.br/">texto</a></p>
-        <p>Estamos localizados na rua Av. João Gualberto N°250</p>
+        <p>nos siga em <a href="https://www.cep.pr.gov.br/">texto</a></p><br>
+        <p>Estamos localizados na rua Av. João Gualberto N°250</p><br>
         <p>Entre em contato por (41) 99767-2993</p>
     </footer>
 </body>
