--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         </div>
     </section>
     <footer>
-        <p>nos siga em <a href="https://www.cep.pr.gov.br/">texto</a></p><br>
-        <p>Estamos localizados na rua Av. João Gualberto N°250</p><br>
-        <p>Entre em contato por (41) 99767-2993</p>
+        <p>nos siga em <a href="https://www.cep.pr.gov.br/">texto</a><br>
+        Estamos localizados na rua Av. João Gualberto N°250<br>
+        Entre em contato por (41) 99767-2993</p>
     </footer>
 </body>
 </html>
