--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     </section>
     <footer>
         <p>nos siga em <a href="https://www.cep.pr.gov.br/">texto</a><br>
-        Estamos localizados na rua Av. João Gualberto N°250<br>
-        Entre em contato por (41) 99767-2993</p>
+        Estamos localizados na rua Av. João Gualberto N°250</p>
+        <p>Entre em contato por (41) 99767-2993</p>
     </footer>
 </body>
 </html>
