--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
     </section>
     <footer>
-        <p>nos siga <a href="https://www.cep.pr.gov.br/">aqui</a><br>
+        <p>nos siga <a href="https://youtu.be/iMnCRZa09PY">aqui</a><br>
         Estamos localizados na rua Av. João Gualberto N°250</p>
         <p>Entre em contato por (41) 99767-2993</p>
     </footer>
