--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
         </h6>
         <ul>
             <div class="titulo"> 
-                <img src="./imagens/Arrow 2.png" alt="flecha" class="flecha1">
                 <h1 class="titulo1">O<span class="tranco"> que você</span> não <span class="tranco">sabia</span>! </h1>
                 <!-- span pode ser repetido em uma mesma linha de código -->
             </div>
             <div class="box">
                 <div class="primeira_parte">
-                   <div class="titulo2">
-
-                    <p> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
+                    <div class="titulo2">
+                        
+                        <img src="./imagens/Arrow 2.png" alt="flecha" class="flecha1">
+                        <p> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
                     de uma galinha é de </span> 13 segundos?<br><span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades aleatórias 
                     <span class="tranco"> de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa.</p>
                     </div>
@@ -83,6 +83,19 @@
                                     maiores </span></p>
                             <!-- <div class="cur1frbt"> -->
                             <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt">
+                            <!-- </div> -->
+                        </div>
+                    </div>
+                    <div class="cur1">
+                        <!-- <div class="cur1frtp"> -->
+                        <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp">
+                        <!-- </div> -->
+                        <div class="txtcur1">
+                            <p>O <span class="higli">soco inglês</span> se popularizou entre as <span class="higli">gangues</span>
+                            no decorrer dos <span class="higli">anos 70 e 80</span>, porém seu uso e porte era <span class="higli">proibido</span> </p>
+                            <!-- <div class="cur1frbt"> -->
+                                <img src="./imagens/D_NQ_NP_616485-MLB46536026488_062021-O-removebg-preview (1) 1.png" alt="soco ingels" class="cur1img">
+                                <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt">
                             <!-- </div> -->
                         </div>
                     </div>
