--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,33 +11,39 @@
         ::-webkit-scrollbar {
             width: 10px;
         }
+
         ::-webkit-scrollbar-thumb:hover {
             background: #3c3044;
         }
+
         ::-webkit-scrollbar-track {
             background: #23202500;
         }
+
         ::-webkit-scrollbar-thumb {
             background: #3c3044;
         }
+
         ::selection {
             color: var(--branco);
             background: #3c3044;
         }
+
         @font-face {
-    	font-family: "bangers";
-    	src: url("./Bangers-Regular.woff2") format("woff2");
+            font-family: "bangers";
+            src: url("./Bangers-Regular.woff2") format("woff2");
 
         }
+
         @font-face {
             font-family: "bentham";
             src: url("./Bentham-Regular.ttf") format("truetype");
         }
+
         @font-face {
             font-family: "andika";
             src: url("./Andika-Regular.ttf") format("truetype");
         }
-        
     </style>
 </head>
 
@@ -46,21 +53,23 @@
             <a class="boton" href="#boton">Equipe</a>
         </h6>
         <ul>
-            <div class="titulo"> 
+            <div class="titulo">
                 <h1 class="titulo1">O<span class="tranco"> que você</span> não <span class="tranco">sabia</span>! </h1>
                 <!-- span pode ser repetido em uma mesma linha de código -->
             </div>
             <div class="box">
                 <div class="primeira_parte">
                     <div class="titulo2">
-                        
+
                         <img src="./imagens/Arrow 2.png" alt="flecha" class="flecha1">
                         <p> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
-                    de uma galinha é de </span> 13 segundos?<br><span class="tranco"> Pois é, nesse site vamos te mostrar </span>curiosidades aleatórias 
-                    <span class="tranco"> de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa.</p>
+                                de uma galinha é de </span> 13 segundos?<br><span class="tranco"> Pois é, nesse site
+                                vamos te mostrar </span>curiosidades aleatórias
+                            <span class="tranco"> de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa.
+                        </p>
                     </div>
 
-                     <div class="troco">   
+                    <div class="troco">
                         <p class="titulo2"><span class="tranco">Role o</span> site<span class="tranco"> para baixo e
                             </span>se divirta
                             <span class="tranco">:)</span>
@@ -80,22 +89,41 @@
                             <p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206
                                     ossos</span> . Apesar disso, os <span class="higli">bebês nascem</span> com cerca de
                                 <span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com ossos
-                                    maiores </span></p>
+                                    maiores </span>
+                            </p>
                             <!-- <div class="cur1frbt"> -->
-                            <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt">
+                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
                             <!-- </div> -->
                         </div>
                     </div>
                     <div class="cur1">
                         <!-- <div class="cur1frtp"> -->
-                        <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp">
+                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                         <!-- </div> -->
                         <div class="txtcur1">
-                            <p>O <span class="higli">soco inglês</span> se popularizou entre as <span class="higli">gangues</span>
-                            no decorrer dos <span class="higli">anos 70 e 80</span>, porém seu uso e porte era <span class="higli">proibido</span> </p>
+                            <p>O <span class="higli">soco inglês</span> se popularizou entre as <span
+                                    class="higli">gangues</span>
+                                no decorrer dos <span class="higli">anos 70 e 80</span>, porém seu uso e porte era <span
+                                    class="higli">proibido</span> </p>
                             <!-- <div class="cur1frbt"> -->
-                                <img src="./imagens/D_NQ_NP_616485-MLB46536026488_062021-O-removebg-preview (1) 1.png" alt="soco ingels" class="cur1img">
-                                <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt">
+                            <img src="./imagens/D_NQ_NP_616485-MLB46536026488_062021-O-removebg-preview (1) 1.png"
+                                alt="soco ingels" class="cur1img">
+                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                            <!-- </div> -->
+                        </div>
+                    </div>
+                    <div class="cur1">
+                        <!-- <div class="cur1frtp"> -->
+                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
+                        <!-- </div> -->
+                        <div class="txtcur1">
+                            <p> <span class="higli">Pandas machos</span> competem entre si para marcar território. Eles
+                                <span class="higli">fazem xixi</span> em <span class="higli">árvores</span>, e
+                                aquele que conseguir marcar o ponto <span class="higli">mais alto</span>, ganha.</p>
+                            <!-- <div class="cur1frbt"> -->
+                            <img src="./imagens/images-removebg-preview 1.png"
+                                alt="soco ingels" class="cur1img">
+                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
                             <!-- </div> -->
                         </div>
                     </div>
@@ -122,8 +150,9 @@
     </section>
     <footer>
         <p>Nos siga <a href="https://youtu.be/iMnCRZa09PY">aqui</a><br>
-        Estamos localizados na Av. João Gualberto N°250</p>
+            Estamos localizados na Av. João Gualberto N°250</p>
         <p>Entre em contato por (41) 99767-2993</p>
     </footer>
 </body>
+
 </html>
