--- a/index.html
+++ b/index.html
@@ -119,10 +119,23 @@
                         <div class="txtcur1">
                             <p> <span class="higli">Pandas machos</span> competem entre si para marcar território. Eles
                                 <span class="higli">fazem xixi</span> em <span class="higli">árvores</span>, e
-                                aquele que conseguir marcar o ponto <span class="higli">mais alto</span>, ganha.</p>
+                                aquele que conseguir marcar o ponto <span class="higli">mais alto</span>, ganha.
+                            </p>
                             <!-- <div class="cur1frbt"> -->
-                            <img src="./imagens/images-removebg-preview 1.png"
-                                alt="soco ingels" class="cur1img">
+                            <img src="./imagens/images-removebg-preview 1.png" alt="pnda" class="cur1img">
+                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                            <!-- </div> -->
+                        </div>
+                    </div>
+                    <div class="cur1">
+                        <!-- <div class="cur1frtp"> -->
+                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
+                        <!-- </div> -->
+                        <div class="txtcur1">
+                            <p> Todos os <span class="higli">mamíferos</span> são capazes de <span
+                                    class="higli">saltar</span>, menos os <span class="higli">elefantes</span>. </p>
+                            <!-- <div class="cur1frbt"> -->
+                            <img src="./imagens/elefante-principais-habitos-caracteristicas-e-especies-vivas-1-removebg-preview (1) 1.png" alt="elfant" class="cur1img">
                             <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
                             <!-- </div> -->
                         </div>
