--- a/index.html
+++ b/index.html
@@ -140,6 +140,18 @@
                             <!-- </div> -->
                         </div>
                     </div>
+                    <div class="cur1">
+                        <!-- <div class="cur1frtp"> -->
+                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
+                        <!-- </div> -->
+                        <div class="txtcur1">
+                            <p> Estima-se que, a cada ano, o monte Everest cresça 4 milímetros.</p>
+                            <!-- <div class="cur1frbt"> -->
+                            <img src="./imagens/images-removebg-preview.png" alt="mnte" class="cur1img">
+                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                            <!-- </div> -->
+                        </div>
+                    </div>
                 </div>
             </div>
         </ul>
