--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                             <p> Todos os <span class="higli">mamíferos</span> são capazes de <span
                                     class="higli">saltar</span>, menos os <span class="higli">elefantes</span>. </p>
                             <!-- <div class="cur1frbt"> -->
-                            <img src="./imagens/elefante-principais-habitos-caracteristicas-e-especies-vivas-1-removebg-preview (1) 1.png" alt="elfant" class="cur1img">
+                            <img src="./imagens/elefante-principais-habitos-caracteristicas-e-especies-vivas-1-removebg-preview (1) 1.png"
+                                alt="elfant" class="cur1img">
                             <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
                             <!-- </div> -->
                         </div>
@@ -145,7 +146,9 @@
                         <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                         <!-- </div> -->
                         <div class="txtcur1">
-                            <p> Estima-se que, a cada ano, o monte Everest cresça 4 milímetros.</p>
+                            <p> <span class="higli">Estima-se</span> que, a cada <span class="higli">ano</span>, o <span
+                                    class="higli">monte Everest</span> cresça <span class="higli">4 milímetros</span>.
+                            </p>
                             <!-- <div class="cur1frbt"> -->
                             <img src="./imagens/images-removebg-preview.png" alt="mnte" class="cur1img">
                             <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
