--- a/index.html
+++ b/index.html
@@ -167,6 +167,18 @@
                             <!-- </div> -->
                         </div>
                     </div>
+                    <div class="cur1">
+                        <!-- <div class="cur1frtp"> -->
+                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
+                        <!-- </div> -->
+                        <div class="txtcur1">
+                            <p> <span class="higli">Vacas</span> não conseguem <span class="higli">subir escadas</span>, por conta de sua <span class="higli">inclinação</span>.</p>
+                            <!-- <div class="cur1frbt"> -->
+                            <img src="./imagens/istockphoto-174432616-612x612-removebg-preview.png" alt="grafa" class="cur1img">
+                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
+                            <!-- </div> -->
+                        </div>
+                    </div>
                 </div>
             </div>
         </ul>
