--- a/index.html
+++ b/index.html
@@ -112,26 +112,27 @@
                                     <img src="./imagens/D_NQ_NP_616485-MLB46536026488_062021-O-removebg-preview (1) 1.png"
                                     alt="soco ingels" class="cur1img">
                         </div>
-                    <div class="cur3">
+                    <div class="cur1">
                         <!-- <div class="cur1frtp"> -->
                         <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <div class="txtcur3">
+                        <!-- </div> -->                            
+                        <img src="./imagens/images-removebg-preview 1.png" alt="pnda" class="cur1img">
+                        <div class="txtcur1">
                             <p> <span class="higli">Pandas machos</span> competem entre si para marcar território. Eles
                                 <span class="higli">fazem xixi</span> em <span class="higli">árvores</span>, e
                                 aquele que conseguir marcar o ponto <span class="higli">mais alto</span>, ganha.
                             </p>
                             <!-- <div class="cur1frbt"> -->
-                            <img src="./imagens/images-removebg-preview 1.png" alt="pnda" class="cur1img">
+
                             <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
                             <!-- </div> -->
                         </div>
                     </div>
-                    <div class="cur4">
+                    <div class="cur2">
                         <!-- <div class="cur1frtp"> -->
                         <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                         <!-- </div> -->
-                        <div class="txtcur4">
+                        <div class="txtcur2">
                             <p> Todos os <span class="higli">mamíferos</span> são capazes de <span
                                     class="higli">saltar</span>, menos os <span class="higli">elefantes</span>. </p>
                             <!-- <div class="cur1frbt"> -->
@@ -141,25 +142,26 @@
                             <!-- </div> -->
                         </div>
                     </div>
-                    <div class="cur5">
+                    <div class="cur1">
                         <!-- <div class="cur1frtp"> -->
                         <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                         <!-- </div> -->
-                        <div class="txtcur5">
+                        <img src="./imagens/images-removebg-preview.png" alt="mnte" class="cur1img">
+                        <div class="txtcur1">
                             <p> <span class="higli">Estima-se</span> que, a cada <span class="higli">ano</span>, o <span
                                     class="higli">monte Everest</span> cresça <span class="higli">4 milímetros</span>.
                             </p>
                             <!-- <div class="cur1frbt"> -->
-                            <img src="./imagens/images-removebg-preview.png" alt="mnte" class="cur1img">
+                            
                             <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
                             <!-- </div> -->
                         </div>
                     </div>
-                    <div class="cur6">
+                    <div class="cur2">
                         <!-- <div class="cur1frtp"> -->
                         <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                         <!-- </div> -->
-                        <div class="txtcur6">
+                        <div class="txtcur2">
                             <p> As <span class="higli">girafas</span> não possuem <span class="higli">cordas
                                     vocais</span>.</p>
                             <!-- <div class="cur1frbt"> -->
@@ -169,16 +171,16 @@
                             <!-- </div> -->
                         </div>
                     </div>
-                    <div class="cur7">
+                    <div class="cur1">
                         <!-- <div class="cur1frtp"> -->
                         <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                         <!-- </div> -->
-                        <div class="txtcur7">
+                        <img src="./imagens/VACA-1-removebg-preview.png" alt="grafa"class="cur1img">
+                        <div class="txtcur1">
                             <p> <span class="higli">Vacas</span> não conseguem <span class="higli">subir escadas</span>,
                                 por conta de sua <span class="higli">inclinação</span>.</p>
                             <!-- <div class="cur1frbt"> -->
-                            <img src="./imagens/VACA-1-removebg-preview.png" alt="grafa"
-                                class="cur1img">
+                            
                             <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
                             <!-- </div> -->
                         </div>
