--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
                         <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                         <!-- </div> -->
                         <img src="./imagens/D_NQ_NP_616485-MLB46536026488_062021-O-removebg-preview (1) 1.png"
-                        alt="soco ingels" class="cur2img">
+                            alt="soco ingels" class="cur2img">
                         <div class="txtcur2">
-                            
+
                             <p>O <span class="higli">soco inglês</span> se popularizou entre as <span
                                     class="higli">gangues</span>
                                 no decorrer dos <span class="higli">anos 70 e 80</span>, porém seu uso e porte era <span
@@ -135,9 +135,9 @@
                         <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                         <!-- </div> -->
                         <img src="./imagens/elefante-principais-habitos-caracteristicas-e-especies-vivas-1-removebg-preview (1) 1.png"
-                        alt="elfant" class="cur2img">
+                            alt="elfant" class="cur2img">
                         <div class="txtcur2">
-                            
+
                             <p> Todos os <span class="higli">mamíferos</span> são capazes de <span
                                     class="higli">saltar</span>, menos os <span class="higli">elefantes</span>. </p>
                             <!-- <div class="cur1frbt"> -->
@@ -166,7 +166,7 @@
                         <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                         <!-- </div> -->
                         <img src="./imagens/istockphoto-174432616-612x612-removebg-preview.png" alt="grafa"
-                        class="cur2img">
+                            class="cur2img">
                         <div class="txtcur2">
                             <p> As <span class="higli">girafas</span> não possuem <span class="higli">cordas
                                     vocais</span>.</p>
@@ -211,11 +211,13 @@
             <h3>Arthur Xisto Vieira</h3>
         </div>
     </section>
-    <footer>
-        <p>Nos siga <a href="https://youtu.be/iMnCRZa09PY">aqui</a><br>
-            Estamos localizados na Av. João Gualberto N°250</p>
-        <p>Entre em contato por (41) 99767-2993</p>
-    </footer>
+    <div class="cabeçalho">
+        <footer>
+            <p>Nos siga <a href="https://youtu.be/iMnCRZa09PY">aqui</a><br>
+                Estamos localizados na Av. João Gualberto N°250</p>
+            <p>Entre em contato por (41) 99767-2993</p>
+        </footer>
+    </div>
 </body>
 
 </html>
