--- a/index.html
+++ b/index.html
@@ -3,48 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que você não sabia</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="./js.js"></script>
-    <style>
-        ::-webkit-scrollbar {
-            width: 10px;
-        }
-
-        ::-webkit-scrollbar-thumb:hover {
-            background: #3c3044;
-        }
-
-        ::-webkit-scrollbar-track {
-            background: #23202500;
-        }
-
-        ::-webkit-scrollbar-thumb {
-            background: #3c3044;
-        }
-
-        ::selection {
-            color: var(--branco);
-            background: #3c3044;
-        }
-
-        @font-face {
-            font-family: "bangers";
-            src: url("./Bangers-Regular.woff2") format("woff2");
-
-        }
-
-        @font-face {
-            font-family: "bentham";
-            src: url("./Bentham-Regular.ttf") format("truetype");
-        }
-
-        @font-face {
-            font-family: "andika";
-            src: url("./Andika-Regular.ttf") format("truetype");
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -53,164 +14,14 @@
             <a class="boton" href="#boton">Equipe</a>
         </h6>
         <ul>
-            <div class="titulo">
-                <h1 class="titulo1">O<span class="tranco"> que você</span> não <span class="tranco">sabia</span>! </h1>
-                <!-- span pode ser repetido em uma mesma linha de código -->
-            </div>
-            <div class="box">
-                <div class="primeira_parte">
-                    <div class="titulo2">
-
-                        <img src="./imagens/Arrow 2.png" alt="flecha" class="flecha1">
-                        <p> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
-                                de uma galinha é de </span> 13 segundos?<br><span class="tranco"> Pois é, nesse site
-                                vamos te mostrar </span>curiosidades aleatórias
-                            <span class="tranco"> de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa.
-                        </p>
-                    </div>
-
-                    <div class="troco">
-                        <p class="titulo2"><span class="tranco">Role o</span> site<span class="tranco"> para baixo e
-                            </span>se divirta
-                            <span class="tranco">:)</span>
-                        </p>
-                        <img class="carapens" src="./imagens/caea_ppensandoo-removebg-preview 1.png"
-                            alt="cara pensando">
-                    </div>
-                    <div class="flecha1">
-                        <img src="./imagens/Arrow 1.png" alt="flecha">
-                    </div>
-                    <div class="cur1">
-                        <!-- <div class="cur1frtp"> -->
-                        <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp">
-                        <!-- </div> -->
-                        <img src="./imagens/esqueleto-removebg-preview 1.png" alt="esqueleto" class="cur1img">
-                        <div class="txtcur1">
-                            <p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206
-                                    ossos</span> . Apesar disso, os <span class="higli">bebês nascem</span> com cerca de
-                                <span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com ossos
-                                    maiores </span>
-                            </p>
-                            <!-- <div class="cur1frbt"> -->
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
-                            <!-- </div> -->
-                        </div>
-                    </div>
-                    <div class="cur2">
-                        <!-- <div class="cur1frtp"> -->
-                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <img src="./imagens/D_NQ_NP_616485-MLB46536026488_062021-O-removebg-preview (1) 1.png"
-                            alt="soco ingels" class="cur2img">
-                        <div class="txtcur2">
-
-                            <p>O <span class="higli">soco inglês</span> se popularizou entre as <span
-                                    class="higli">gangues</span>
-                                no decorrer dos <span class="higli">anos 70 e 80</span>, porém seu uso e porte era <span
-                                    class="higli">proibido</span> </p>
-                            <!-- <div class="cur1frbt"> -->
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
-                            <!-- </div> -->
-                        </div>
-
-                    </div>
-                    <div class="cur1">
-                        <!-- <div class="cur1frtp"> -->
-                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <img src="./imagens/images-removebg-preview 1.png" alt="pnda" class="cur1img">
-                        <div class="txtcur1">
-                            <p> <span class="higli">Pandas machos</span> competem entre si para marcar território. Eles
-                                <span class="higli">fazem xixi</span> em <span class="higli">árvores</span>, e
-                                aquele que conseguir marcar o ponto <span class="higli">mais alto</span>, ganha.
-                            </p>
-                            <!-- <div class="cur1frbt"> -->
-
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
-                            <!-- </div> -->
-                        </div>
-                    </div>
-                    <div class="cur2">
-                        <!-- <div class="cur1frtp"> -->
-                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <img src="./imagens/elefante-principais-habitos-caracteristicas-e-especies-vivas-1-removebg-preview (1) 1.png"
-                            alt="elfant" class="cur2img">
-                        <div class="txtcur2">
-
-                            <p> Todos os <span class="higli">mamíferos</span> são capazes de <span
-                                    class="higli">saltar</span>, menos os <span class="higli">elefantes</span>. </p>
-                            <!-- <div class="cur1frbt"> -->
-
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
-                            <!-- </div> -->
-                        </div>
-                    </div>
-                    <div class="cur1">
-                        <!-- <div class="cur1frtp"> -->
-                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <img src="./imagens/images-removebg-preview.png" alt="mnte" class="cur3img">
-                        <div class="txtcur1">
-                            <p> <span class="higli">Estima-se</span> que, a cada <span class="higli">ano</span>, o <span
-                                    class="higli">monte Everest</span> cresça <span class="higli">4 milímetros</span>.
-                            </p>
-                            <!-- <div class="cur1frbt"> -->
-
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
-                            <!-- </div> -->
-                        </div>
-                    </div>
-                    <div class="cur2">
-                        <!-- <div class="cur1frtp"> -->
-                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <img src="./imagens/istockphoto-174432616-612x612-removebg-preview.png" alt="grafa"
-                            class="cur2img">
-                        <div class="txtcur2">
-                            <p> As <span class="higli">girafas</span> não possuem <span class="higli">cordas
-                                    vocais</span>.</p>
-                            <!-- <div class="cur1frbt"> -->
-
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
-                            <!-- </div> -->
-                        </div>
-                    </div>
-                    <div class="cur1">
-                        <!-- <div class="cur1frtp"> -->
-                        <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
-                        <!-- </div> -->
-                        <img src="./imagens/VACA-1-removebg-preview.png" alt="grafa" class="cur1img">
-                        <div class="txtcur1">
-                            <p> <span class="higli">Vacas</span> não conseguem <span class="higli">subir escadas</span>,
-                                por conta de sua <span class="higli">inclinação</span>.</p>
-                            <!-- <div class="cur1frbt"> -->
-
-                            <!-- <img src="./imagens/frame.bottom.right.png" alt="frame" class="cur1frbt"> -->
-                            <!-- </div> -->
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <!-- Conteúdo do cabeçalho -->
         </ul>
     </header>
+
     <section id="boton" class="sextion">
-        <div>
-            <h2 class="aleatório">Aleatorista</h2>
-            <img src="./imagens/IMG_20240219_113841 1.png" alt="lorenzo">
-            <h3>Lorenzo Antunes Pires</h3>
-        </div>
-        <div>
-            <h2 class="aleatório">Aleatorista</h2>
-            <img src="./imagens/IMG_20230225_120436_743 1.png" alt="jumlia">
-            <h3>Julia Moreira</h3>
-        </div>
-        <div>
-            <h2 class="aleatório">Aleatorista</h2>
-            <img src="./imagens/IMG-20240219-WA0004 1.png" alt="waaa">
-            <h3>Arthur Xisto Vieira</h3>
-        </div>
+        <!-- Conteúdo da seção -->
     </section>
+
     <div class="cabeçalho">
         <footer>
             <p>Nos siga <a href="https://youtu.be/iMnCRZa09PY">aqui</a><br>
@@ -218,6 +29,8 @@
             <p>Entre em contato por (41) 99767-2993</p>
         </footer>
     </div>
+
+    <script src="js.js"></script>
 </body>
 
 </html>
