--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que você não sabia</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Adicione seus estilos aqui */
+    </style>
 </head>
 
 <body>
@@ -14,14 +17,59 @@
             <a class="boton" href="#boton">Equipe</a>
         </h6>
         <ul>
-            <!-- Conteúdo do cabeçalho -->
+            <div class="titulo">
+                <h1 class="titulo1">O<span class="tranco"> que você</span> não <span class="tranco">sabia</span>! </h1>
+            </div>
+            <div class="box">
+                <div class="primeira_parte">
+                    <div class="titulo2">
+                        <img src="imagens/Arrow 2.png" alt="flecha" class="flecha1">
+                        <p> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
+                                de uma galinha é de </span> 13 segundos?<br><span class="tranco"> Pois é, nesse site
+                                vamos te mostrar </span>curiosidades aleatórias
+                            <span class="tranco"> de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa.
+                        </p>
+                    </div>
+                    <div class="troco">
+                        <p class="titulo2"><span class="tranco">Role o</span> site<span class="tranco"> para baixo e
+                            </span>se divirta
+                            <span class="tranco">:)</span>
+                        </p>
+                        <img class="carapens" src="imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
+                    </div>
+                    <!-- Exemplos de curiosidades -->
+                    <div class="cur1">
+                        <img src="imagens/esqueleto-removebg-preview 1.png" alt="esqueleto" class="cur1img">
+                        <div class="txtcur1">
+                            <p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206
+                                    ossos</span>. Apesar disso, os <span class="higli">bebês nascem</span> com cerca de
+                                <span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com ossos
+                                    maiores</span>.
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Adicione mais curiosidades conforme necessário -->
+                </div>
+            </div>
         </ul>
     </header>
-
     <section id="boton" class="sextion">
-        <!-- Conteúdo da seção -->
+        <div>
+            <h2 class="aleatório">Aleatorista</h2>
+            <img src="imagens/IMG_20240219_113841 1.png" alt="lorenzo">
+            <h3>Lorenzo Antunes Pires</h3>
+        </div>
+        <div>
+            <h2 class="aleatório">Aleatorista</h2>
+            <img src="imagens/IMG_20230225_120436_743 1.png" alt="jumlia">
+            <h3>Julia Moreira</h3>
+        </div>
+        <div>
+            <h2 class="aleatório">Aleatorista</h2>
+            <img src="imagens/IMG-20240219-WA0004 1.png" alt="waaa">
+            <h3>Arthur Xisto Vieira</h3>
+        </div>
     </section>
-
     <div class="cabeçalho">
         <footer>
             <p>Nos siga <a href="https://youtu.be/iMnCRZa09PY">aqui</a><br>
@@ -29,7 +77,6 @@
             <p>Entre em contato por (41) 99767-2993</p>
         </footer>
     </div>
-
     <script src="js.js"></script>
 </body>
 
