--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul>
             <div class="titulo">
                 <h1 class="titulo1">O<span class="tranco"> que você</span> não <span class="tranco">sabia</span>! </h1>
-                <img src="imagens/logo.png" alt="Logo">
+                <img src="imagens/elefante-principais-habitos-caracteristicas-e-especies-vivas-1-removebg-preview (1) 1.png" alt="Logo">
             </div>
             <div class="box">
                 <!-- Conteúdo do cabeçalho -->
