--- a/index.html
+++ b/index.html
@@ -7,17 +7,115 @@
     <title>O que você não sabia</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Adicione seus estilos aqui */
-        /* Exemplo de estilo para tornar a imagem do cabeçalho responsiva */
+        ::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: #3c3044;
+        }
+
+        ::-webkit-scrollbar-track {
+            background: #23202500;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: #3c3044;
+        }
+
+        ::selection {
+            color: var(--branco);
+            background: #3c3044;
+        }
+
+        @font-face {
+            font-family: "bangers";
+            src: url("./Bangers-Regular.woff2") format("woff2");
+
+        }
+
+        @font-face {
+            font-family: "bentham";
+            src: url("./Bentham-Regular.ttf") format("truetype");
+        }
+
+        @font-face {
+            font-family: "andika";
+            src: url("./Andika-Regular.ttf") format("truetype");
+        }
+        
+        /* Estilos adicionais para tornar o conteúdo responsivo */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f3f3f3;
+        }
+
+        header {
+            background-color: #3c3044;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        .titulo1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+        }
+
         .titulo1 img {
             max-width: 100%;
             height: auto;
         }
 
-        /* Exemplo de estilo para ajustar o tamanho do texto do cabeçalho em telas menores */
-        @media screen and (max-width: 600px) {
+        .box {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+        }
+
+        .tranco {
+            color: #3c3044;
+            font-weight: bold;
+        }
+
+        .cur1,
+        .cur2 {
+            display: flex;
+            margin-top: 20px;
+        }
+
+        .cur1img,
+        .cur2img {
+            flex: 1;
+            max-width: 100%;
+            height: auto;
+            margin-right: 20px;
+        }
+
+        .txtcur1,
+        .txtcur2 {
+            flex: 2;
+        }
+
+        /* Media query para ajustar o layout em telas menores */
+        @media screen and (max-width: 768px) {
             .titulo1 {
                 font-size: 24px;
+            }
+
+            .cur1,
+            .cur2 {
+                flex-direction: column;
+            }
+
+            .cur1img,
+            .cur2img {
+                margin-right: 0;
+                margin-bottom: 20px;
             }
         }
     </style>
@@ -25,32 +123,44 @@
 
 <body>
     <header>
-        <h6>
-            <a class="boton" href="#boton">Equipe</a>
-        </h6>
-        <ul>
-            <div class="titulo">
-                <h1 class="titulo1">O<span class="tranco"> que você</span> não <span class="tranco">sabia</span>! </h1>
-                <img src="imagens/elefante-principais-habitos-caracteristicas-e-especies-vivas-1-removebg-preview (1) 1.png" alt="Logo">
+        <h1 class="titulo1">O<span class="tranco"> que você</span> não <span class="tranco">sabia</span>! </h1>
+        <div class="box">
+            <div class="titulo2">
+                <img src="./imagens/Arrow 2.png" alt="flecha">
+                <p> <span class="tranco">Você sabia que o </span>recorde<span class="tranco"> de voo
+                        de uma galinha é de </span> 13 segundos?<br><span class="tranco"> Pois é, nesse site
+                        vamos te mostrar </span>curiosidades aleatórias
+                    <span class="tranco"> de todo tipo de coisa, que talvez lhe sirva para </span>alguma coisa.
+                </p>
             </div>
-            <div class="box">
-                <!-- Conteúdo do cabeçalho -->
+            <div class="troco">
+                <p class="titulo2"><span class="tranco">Role o</span> site<span class="tranco"> para baixo e
+                        </span>se divirta
+                    <span class="tranco">:)</span>
+                </p>
+                <img class="carapens" src="./imagens/caea_ppensandoo-removebg-preview 1.png" alt="cara pensando">
             </div>
-        </ul>
-    </header>
-    <section id="boton" class="sextion">
-        <div>
-            <!-- Conteúdo da seção -->
+            <div class="cur1">
+                <img src="./imagens/esqueleto-removebg-preview 1.png" alt="esqueleto" class="cur1img">
+                <div class="txtcur1">
+                    <p>O <span class="higli">esqueleto humano</span> é formado por <span class="higli">206
+                            ossos</span>. Apesar disso, os <span class="higli">bebês nascem</span> com cerca de
+                        <span class="higli">270 ossos</span>. Eles vão se fundindo <span class="higli">com ossos
+                            maiores</span>.
+                    </p>
+                </div>
+            </div>
+            <!-- Adicione mais curiosidades conforme necessário -->
         </div>
-    </section>
-    <div class="cabeçalho">
-        <footer>
-            <p>Nos siga <a href="https://youtu.be/iMnCRZa09PY">aqui</a><br>
-                Estamos localizados na Av. João Gualberto N°250</p>
-            <p>Entre em contato por (41) 99767-2993</p>
-        </footer>
-    </div>
-    <script src="js.js"></script>
+    </header>
+
+    <!-- Adicione mais seções conforme necessário -->
+
+    <footer>
+        <p>Nos siga <a href="https://youtu.be/iMnCRZa09PY">aqui</a><br>
+            Estamos localizados na Av. João Gualberto N°250</p>
+        <p>Entre em contato por (41) 99767-2993</p>
+    </footer>
 </body>
 
 </html>
