--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>O que você não sabia</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="./js.js"></script>
     <style>
         ::-webkit-scrollbar {
             width: 10px;
