--- a/index.html
+++ b/index.html
@@ -194,29 +194,31 @@
             </div>
         </ul>
     </header>
-    <section id="boton" class="sextion">
-        <div>
-            <h2 class="aleatório">Aleatorista</h2>
-            <img src="./imagens/IMG_20240219_113841 1.png" alt="lorenzo">
-            <h3>Lorenzo Antunes Pires</h3>
+    <div class="final">
+        <section id="boton" class="sextion">
+            <div>
+                <h2 class="aleatório">Aleatorista</h2>
+                <img src="./imagens/IMG_20240219_113841 1.png" alt="lorenzo">
+                <h3>Lorenzo Antunes Pires</h3>
+            </div>
+            <div>
+                <h2 class="aleatório">Aleatorista</h2>
+                <img src="./imagens/IMG_20230225_120436_743 1.png" alt="jumlia">
+                <h3>Julia Moreira</h3>
+            </div>
+            <div>
+                <h2 class="aleatório">Aleatorista</h2>
+                <img src="./imagens/IMG-20240219-WA0004 1.png" alt="waaa">
+                <h3>Arthur Xisto Vieira</h3>
+            </div>
+        </section>
+        <div class="cabeçalho">
+            <footer>
+                <p>Nos siga <a href="https://www.cep.pr.gov.br">aqui</a><br>
+                    Estamos localizados na Av. João Gualberto N°250</p>
+                <p>Entre em contato por (41) 99767-2993</p>
+            </footer>
         </div>
-        <div>
-            <h2 class="aleatório">Aleatorista</h2>
-            <img src="./imagens/IMG_20230225_120436_743 1.png" alt="jumlia">
-            <h3>Julia Moreira</h3>
-        </div>
-        <div>
-            <h2 class="aleatório">Aleatorista</h2>
-            <img src="./imagens/IMG-20240219-WA0004 1.png" alt="waaa">
-            <h3>Arthur Xisto Vieira</h3>
-        </div>
-    </section>
-    <div class="cabeçalho">
-        <footer>
-            <p>Nos siga <a href="https://youtu.be/iMnCRZa09PY">aqui</a><br>
-                Estamos localizados na Av. João Gualberto N°250</p>
-            <p>Entre em contato por (41) 99767-2993</p>
-        </footer>
     </div>
 </body>
 
