--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 
                     <div class="troco">
                         <p class="titulo2"><span class="tranco">Role o</span> site<span class="tranco"> para baixo e
-                            </span>se divirta
-                            <span class="tranco">:)</span>
+                            </span>se divirta <span class="tranco">:)</span>
                         </p>
                         <img class="carapens" src="./imagens/caea_ppensandoo-removebg-preview 1.png"
                             alt="cara pensando">
@@ -101,7 +100,7 @@
                         <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                         <!-- </div> -->
                         <img src="./imagens/D_NQ_NP_616485-MLB46536026488_062021-O-removebg-preview (1) 1.png"
-                            alt="soco ingels" class="cur2img">
+                            alt="soco ingels" class="cur5img">
                         <div class="txtcur2">
 
                             <p>O <span class="higli">soco inglês</span> se popularizou entre as <span
@@ -135,7 +134,7 @@
                         <!-- <img src="./imagens/frame.top.left.png" alt="frame" class="cur1frtp"> -->
                         <!-- </div> -->
                         <img src="./imagens/elefante-principais-habitos-caracteristicas-e-especies-vivas-1-removebg-preview (1) 1.png"
-                            alt="elfant" class="cur6img">
+                            alt="elfant" class="cur2img">
                         <div class="txtcur2">
 
                             <p> Todos os <span class="higli">mamíferos</span> são capazes de <span
