--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <h6>
             <a class="boton" href="#boton">Equipe</a>
         </h6>
+        <h7>
+            <a class="boton2" href="#boton2">Curiosidades</a>
+        </h7>
         <ul>
             <div class="titulo">
                 <h1 class="titulo1">O<span class="tranco"> que você</span> não <span class="tranco">sabia</span>! </h1>
